--- a/classes.html
+++ b/classes.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نظام المعهد - إدارة الحصص</title>
 <style>
 body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
-header{padding:18px;text-align:center;font-size:20px;font-weight:700;}
-.wrap{max-width:1200px;margin:22px auto;padding:12px;}
+header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;display:flex;align-items:center;justify-content:space-between;}
+header img{height:40px;}
+.wrap{max-width:1400px;margin:22px auto;padding:12px;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
+.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-top:6px;}
 .btn.warn{background:#ff7043;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.class-box{padding:6px;border-radius:6px;color:#fff;margin:2px;text-align:center;}
+.day-column{vertical-align:top;width:14%;min-width:150px;}
+.lesson-box{border-radius:8px;padding:8px;margin-bottom:8px;color:#fff;}
 @media print{
   body{background:white;}
-  header,.filters,.actions,.modal,.btn{display:none !important;}
-  table{page-break-inside:avoid;}
+  header,.filters,.actions,.card button,.card form{display:none !important;}
+  .wrap{padding:0;}
 }
 </style>
 </head>
 <body>
-<header id="instituteHeader">
-  <img id="instituteLogo" src="" alt="" style="height:50px;vertical-align:middle;margin-left:10px;">
-  <span id="instituteName">المعهد</span>
+<header>
+  <img id="instituteLogo" src="" alt="شعار المعهد">
+  <span id="instituteName">اسم المعهد</span>
+  <button onclick="window.print()" class="btn">🖨️ طباعة الجدول</button>
 </header>
-
 <div class="wrap">
 
 <div class="card">
@@ -42,9 +44,23 @@ th{background:#004aad;color:#fff;}
     <label>المجموعة / الكروب</label>
     <select id="groupSelect" required></select>
     <label>القاعة</label>
-    <select id="roomSelect" required></select>
+    <select id="roomSelect" required>
+      <option value="">اختر القاعة</option>
+      <option value="قاعة 1">قاعة 1</option>
+      <option value="قاعة 2">قاعة 2</option>
+      <option value="قاعة 3">قاعة 3</option>
+      <option value="قاعة 4">قاعة 4</option>
+      <option value="قاعة 5">قاعة 5</option>
+      <option value="قاعة 6">قاعة 6</option>
+      <option value="قاعة 7">قاعة 7</option>
+      <option value="قاعة 8">قاعة 8</option>
+      <option value="قاعة 9">قاعة 9</option>
+      <option value="قاعة 10">قاعة 10</option>
+    </select>
     <label>اليوم</label>
     <select id="daySelect" required>
+      <option value="السبت">السبت</option>
+      <option value="الأحد">الأحد</option>
       <option value="الاثنين">الاثنين</option>
       <option value="الثلاثاء">الثلاثاء</option>
       <option value="الأربعاء">الأربعاء</option>
@@ -52,40 +68,16 @@ th{background:#004aad;color:#fff;}
       <option value="الجمعة">الجمعة</option>
     </select>
     <label>وقت البدء</label>
-    <input id="startTimeInput" type="time" required>
+    <input id="startTime" type="time" required>
     <label>وقت الانتهاء</label>
-    <input id="endTimeInput" type="time" required>
+    <input id="endTime" type="time" required>
     <button type="submit" class="btn">✅ حفظ الحصة</button>
   </form>
 </div>
 
-<div class="card filters">
-  <strong>فلترة الحصص</strong>
-  <label>المادة</label>
-  <select id="filterSubject"><option value="">الكل</option></select>
-  <label>الأستاذ</label>
-  <select id="filterTeacher"><option value="">الكل</option></select>
-  <label>المجموعة</label>
-  <select id="filterGroup"><option value="">الكل</option></select>
-  <button id="filterBtn" class="btn" style="margin-top:8px">تطبيق الفلتر</button>
-</div>
-
 <div class="card">
-  <strong>جدول الحصص</strong>
-  <table id="classesTable">
-    <thead>
-      <tr>
-        <th>اليوم</th>
-        <th>الوقت</th>
-        <th>المادة</th>
-        <th>الأستاذ</th>
-        <th>المجموعة</th>
-        <th>القاعة</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <strong>جدول الحصص الأسبوعي</strong>
+  <div id="timetable" style="display:flex;justify-content:space-between;"></div>
 </div>
 
 </div>
@@ -93,65 +85,62 @@ th{background:#004aad;color:#fff;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
   projectId: "oma0-33cc0",
   storageBucket: "oma0-33cc0.firebasestorage.app",
   messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
-  measurementId: "G-5CKWYQT9XZ"
+  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
+// عناصر الصفحة
 const classForm = document.getElementById("classForm");
 const subjectSelect = document.getElementById("subjectSelect");
 const teacherSelect = document.getElementById("teacherSelect");
 const groupSelect = document.getElementById("groupSelect");
 const roomSelect = document.getElementById("roomSelect");
-const startTimeInput = document.getElementById("startTimeInput");
-const endTimeInput = document.getElementById("endTimeInput");
-const classesTableBody = document.querySelector("#classesTable tbody");
+const startTime = document.getElementById("startTime");
+const endTime = document.getElementById("endTime");
+const daySelect = document.getElementById("daySelect");
+const timetableDiv = document.getElementById("timetable");
 
-const filterSubject = document.getElementById("filterSubject");
-const filterTeacher = document.getElementById("filterTeacher");
-const filterGroup = document.getElementById("filterGroup");
-const filterBtn = document.getElementById("filterBtn");
-
-let subjectsList=[], teachersList=[], groupsList=[], roomsList=[], classesData=[], subjectColors={};
-let institute={};
+let subjectsList=[], teachersList=[], groupsList=[], classesData=[], colorsMap={};
+let instituteNameElem = document.getElementById("instituteName");
+let instituteLogoElem = document.getElementById("instituteLogo");
 
 // التحقق من تسجيل الدخول
 onAuthStateChanged(auth, async (user)=>{
-  if(!user){ window.location.href="login.html"; return; }
+  if(!user) { window.location.href="login.html"; return; }
   document.body.style.visibility="visible";
-  await loadInstituteData();
+  await loadInstituteSettings();
   await loadSubjectsTeachersGroups();
   await loadClasses();
 });
 
-// جلب بيانات المعهد (الاسم، الشعار، الألوان)
-async function loadInstituteData(){
-  const instSnap = await getDocs(collection(db,"settings"));
-  instSnap.forEach(docSnap=>{
+// جلب بيانات المعهد والألوان
+async function loadInstituteSettings(){
+  const settingsSnap = await getDocs(collection(db,"settings"));
+  settingsSnap.forEach(docSnap=>{
     const data = docSnap.data();
-    institute = data;
+    if(data.name) instituteNameElem.textContent = data.name;
+    if(data.logo) instituteLogoElem.src = data.logo;
+    if(data.colors) colorsMap = data.colors; // { "رياضيات": "#ff0000", "فيزياء": "#00ff00", ...}
   });
-  document.getElementById("instituteName").textContent = institute.name || "المعهد";
-  document.getElementById("instituteLogo").src = institute.logo || "";
 }
 
-// تحميل المواد والأساتذة والكروبات والقاعات
+// جلب المواد، الأساتذة، الكروبات
 async function loadSubjectsTeachersGroups(){
   subjectsList = [];
   teachersList = [];
   groupsList = [];
-  roomsList = ["قاعة 1","قاعة 2","قاعة 3","قاعة 4","قاعة 5","قاعة 6","قاعة 7","قاعة 8","قاعة 9","قاعة 10"];
 
   const studentsSnap = await getDocs(collection(db,"students"));
   const subjectsSet = new Set();
@@ -167,122 +156,82 @@ async function loadSubjectsTeachersGroups(){
   teachersSnap.forEach(t=>{teachersList.push({id:t.id,...t.data()});});
 
   // تعبئة القوائم
-  subjectSelect.innerHTML = "<option value=''>اختر المادة</option>";
-  filterSubject.innerHTML = "<option value=''>الكل</option>";
-  subjectsList.forEach((sub,i)=>{
-    subjectSelect.innerHTML += `<option value="${sub}">${sub}</option>`;
-    filterSubject.innerHTML += `<option value="${sub}">${sub}</option>`;
-  });
+  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
+  subjectsList.forEach(s=>subjectSelect.innerHTML+=`<option value="${s}">${s}</option>`);
 
-  teacherSelect.innerHTML = "<option value=''>اختر الأستاذ</option>";
-  filterTeacher.innerHTML = "<option value=''>الكل</option>";
-  teachersList.forEach(t=>{
-    teacherSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
-    filterTeacher.innerHTML += `<option value="${t.id}">${t.name}</option>`;
-  });
+  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
+  teachersList.forEach(t=>teacherSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`);
 
-  groupSelect.innerHTML = "<option value=''>اختر الكروب</option>";
-  filterGroup.innerHTML = "<option value=''>الكل</option>";
-  groupsList.forEach(g=>{
-    groupSelect.innerHTML += `<option value="${g}">${g}</option>`;
-    filterGroup.innerHTML += `<option value="${g}">${g}</option>`;
-  });
-
-  roomSelect.innerHTML = "<option value=''>اختر القاعة</option>";
-  roomsList.forEach(r=>{ roomSelect.innerHTML += `<option value="${r}">${r}</option>`; });
-
-  // تخصيص ألوان المواد
-  const defaultColors = ["#004aad","#ff7043","#ffcc33","#00b894","#6c5ce7","#fd79a8","#e17055","#00cec9"];
-  subjectsList.forEach((sub,i)=>{
-    subjectColors[sub] = (institute.subjectColors?.[i] || defaultColors[i % defaultColors.length]);
-  });
+  groupSelect.innerHTML="<option value=''>اختر الكروب</option>";
+  groupsList.forEach(g=>groupSelect.innerHTML+=`<option value="${g}">${g}</option>`);
 }
 
-// حفظ الحصة مع التحقق من التعارض
+// حفظ الحصة مع التأكد من عدم التعارض
 classForm.addEventListener("submit", async e=>{
   e.preventDefault();
-  const subject = subjectSelect.value;
-  const teacherId = teacherSelect.value;
-  const group = groupSelect.value;
-  const room = roomSelect.value;
-  const day = document.getElementById("daySelect").value;
-  const startTime = startTimeInput.value;
-  const endTime = endTimeInput.value;
+  const newClass = {
+    subject: subjectSelect.value,
+    teacherId: teacherSelect.value,
+    group: groupSelect.value,
+    room: roomSelect.value,
+    day: daySelect.value,
+    startTime: startTime.value,
+    endTime: endTime.value
+  };
 
-  // تحقق التعارض
-  const snapshot = await getDocs(collection(db,"classes"));
-  let conflict=false;
-  snapshot.forEach(c=>{
-    const cls = c.data();
-    if(cls.day===day && ((cls.teacherId===teacherId) || (cls.group===group) || (cls.room===room))){
-      if(!(endTime <= cls.startTime || startTime >= cls.endTime)){
-        conflict=true;
-      }
-    }
-  });
-  if(conflict){ alert("⚠️ هناك تعارض بالمعلم، الكروب، أو القاعة في هذا الوقت"); return; }
+  // التأكد من عدم التعارض
+  const conflict = classesData.find(c=>c.day===newClass.day && (
+    (c.teacherId===newClass.teacherId) || 
+    (c.group===newClass.group) || 
+    (c.room===newClass.room)
+  ) && ((newClass.startTime < c.endTime) && (newClass.endTime > c.startTime)) );
+  
+  if(conflict){
+    alert("❌ هناك تعارض مع حصة موجودة");
+    return;
+  }
 
-  // الطلاب المرتبطين بالكروب
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const groupStudents = [];
-  studentsSnap.forEach(s=>{
-    const st = s.data();
-    if(st.group===group) groupStudents.push({id:s.id,name:st.name});
-  });
-
-  await addDoc(collection(db,"classes"),{
-    subject, teacherId, group, room, day, startTime, endTime, students:groupStudents, attendance:[]
-  });
-
-  alert("تم حفظ الحصة بنجاح");
+  await addDoc(collection(db,"classes"), newClass);
+  alert("✅ تم حفظ الحصة");
   classForm.reset();
-  loadClasses();
+  await loadClasses();
 });
 
 // تحميل الحصص
-async function loadClasses(filter={}){
+async function loadClasses(){
   const snapshot = await getDocs(collection(db,"classes"));
-  classesTableBody.innerHTML = "";
   classesData = [];
-  snapshot.forEach(docSnap=>{
-    const cls = {id:docSnap.id,...docSnap.data()};
-    if((!filter.subject || cls.subject===filter.subject) &&
-       (!filter.teacher || cls.teacherId===filter.teacher) &&
-       (!filter.group || cls.group===filter.group)){
-      classesData.push(cls);
-      const teacherName = (teachersList.find(t=>t.id===cls.teacherId)||{}).name || "غير معروف";
-      const color = subjectColors[cls.subject] || "#004aad";
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${cls.day}</td>
-        <td>${cls.startTime} - ${cls.endTime}</td>
-        <td><div class="class-box" style="background:${color}">${cls.subject}</div></td>
-        <td>${teacherName}</td>
-        <td>${cls.group}</td>
-        <td>${cls.room}</td>
-        <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+  snapshot.forEach(docSnap=>classesData.push({id:docSnap.id,...docSnap.data()}));
+  renderTimetable();
+}
+
+// عرض الجدول
+function renderTimetable(){
+  timetableDiv.innerHTML="";
+  const days = ["السبت","الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة"];
+  days.forEach(day=>{
+    const dayDiv = document.createElement("div");
+    dayDiv.classList.add("day-column");
+    dayDiv.innerHTML=`<strong>${day}</strong>`;
+    const dayClasses = classesData.filter(c=>c.day===day).sort((a,b)=>a.startTime.localeCompare(b.startTime));
+    dayClasses.forEach(c=>{
+      const teacherName = (teachersList.find(t=>t.id===c.teacherId)||{}).name || "غير معروف";
+      const color = colorsMap[c.subject] || "#004aad";
+      const box = document.createElement("div");
+      box.classList.add("lesson-box");
+      box.style.background=color;
+      box.innerHTML=`
+        <strong>${c.subject}</strong><br>
+        ${teacherName}<br>
+        ${c.group}<br>
+        ${c.room}<br>
+        ${c.startTime} - ${c.endTime}
       `;
-      classesTableBody.appendChild(tr);
-    }
+      dayDiv.appendChild(box);
+    });
+    timetableDiv.appendChild(dayDiv);
   });
 }
-
-// حذف الحصة
-window.deleteClass = async id=>{
-  if(confirm("هل تريد حذف الحصة؟")){
-    await deleteDoc(doc(db,"classes",id));
-    loadClasses();
-  }
-}
-
-// تطبيق الفلتر
-filterBtn.addEventListener("click", ()=>{
-  loadClasses({
-    subject: filterSubject.value,
-    teacher: filterTeacher.value,
-    group: filterGroup.value
-  });
-});
 </script>
 </body>
 </html>
