--- a/setup.html
+++ b/setup.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة الأساتذة - OMA</title>
+<title>تهيئة الحصص - المعهد</title>
 <style>
 body { font-family:'Cairo',sans-serif; padding:30px; background:#f5f9ff; color:#102027; }
 button { padding:10px 16px; border:none; border-radius:8px; background:#004aad; color:#fff; cursor:pointer; font-weight:bold; }
@@ -13,8 +13,8 @@ pre { background:#eef4ff; padding:10px; border-radius:8px; overflow-x:auto; whit
 </head>
 <body>
 
-<h2>🚀 تهيئة Collection الأساتذة - OMA</h2>
-<p>اضغط على الزر لإنشاء جميع الحقول الأساسية لكل أستاذ جديد تلقائيًا.</p>
+<h2>🚀 تهيئة Collection الحصص - المعهد</h2>
+<p>اضغط على الزر لإنشاء جميع الحقول الأساسية لكل حصة جديدة تلقائيًا.</p>
 <button id="initBtn">ابدأ التهيئة</button>
 <pre id="log"></pre>
 
@@ -23,7 +23,7 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebas
 import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-analytics.js";
 
-// إعداد Firebase لمشروع OMA0
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -43,31 +43,30 @@ const initBtn = document.getElementById("initBtn");
 
 function addLog(msg){ log.textContent += msg + "\n"; }
 
-// ✅ إنشاء هيكل أستاذ جديد
-async function createTeacher(teacherId){
-  const teacherRef = doc(db, "teachers", teacherId);
+// ✅ إنشاء هيكل حصة جديد
+async function createClass(classId){
+  const classRef = doc(db, "classes", classId);
 
-  if((await getDoc(teacherRef)).exists()){
-    addLog(`⚠️ الأستاذ ${teacherId} موجود مسبقًا`);
+  if((await getDoc(classRef)).exists()){
+    addLog(`⚠️ الحصة ${classId} موجودة مسبقًا`);
     return;
   }
 
-  await setDoc(teacherRef, {
-    name: "",
-    phone: "",
-    address: "",
-    subjects: [],     // مواد المدرس
-    stages: [],       // المراحل التي يدرسها
-    groups: [],       // الكروبات الخاصة به
-    percentTeacher: 0,   // نسبة الأستاذ
-    percentInstitute: 0, // نسبة المعهد
-    totalStudents: 0,
-    totalIncome: 0,
+  await setDoc(classRef, {
+    subject: "",
+    teacherId: "",
+    group: "",
+    room: "",          // القاعة
+    day: "",           // يوم الأسبوع
+    startTime: "",     // وقت البداية
+    endTime: "",       // وقت النهاية
+    students: [],      // الطلاب المسجلين بالحصة
+    attendance: [],    // الحضور والغياب
     notes: "",
     createdAt: new Date().toISOString()
   });
 
-  addLog(`✅ تم إنشاء هيكل الأستاذ ${teacherId}`);
+  addLog(`✅ تم إنشاء هيكل الحصة ${classId}`);
 }
 
 initBtn.addEventListener("click", async()=>{
@@ -75,12 +74,12 @@ initBtn.addEventListener("click", async()=>{
   initBtn.textContent = "⏳ جاري التهيئة...";
 
   try {
-    // أمثلة أساتذة تجريبيين
-    await createTeacher("teacher_001");
-    await createTeacher("teacher_002");
-    await createTeacher("teacher_003");
+    // أمثلة حصص تجريبية
+    await createClass("class_001");
+    await createClass("class_002");
+    await createClass("class_003");
 
-    addLog("\n🎉 تم تهيئة جميع الحقول الأساسية للأساتذة بنجاح!");
+    addLog("\n🎉 تم تهيئة جميع الحقول الأساسية للحصص بنجاح!");
     initBtn.textContent = "تم الانتهاء";
   } catch(e){
     addLog("❌ خطأ أثناء التهيئة: "+e.message);
